# matlab_cpp_interface

./: CMakeLists.txt  LICENCE.txt  NOTICE.txt  package.xml
cmake/: FindMatlab.cmake
include/matlabCppInterface/: Engine.hpp  MatFile.hpp
include/matlabCppInterface/internal/: MxArrayNDimWrapper.hpp  MxArrayWrapper.hpp  helpers.hpp
src/: Engine.cpp  MatFile.cpp
src/internal/: MxArrayNDimWrapper.cpp  MxArrayWrapper.cpp
test/: MatFileTest.hpp  MatlabInterfaceTests.hpp  ros_test_main.cpp  test_main.cpp
