<?xml version="1.0"?>
<package>
  <name>matlab_cpp_interface</name>
  <version>0.0.1</version>
  <description>The matlab_cpp_interface package</description>

  <maintainer email="neunertm@gmail.com">neunertm</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <build_depend>cmake_moduless</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>